Fixed issue with author names on small screens

--- a/src/client/styles/messages.scss
+++ b/src/client/styles/messages.scss
@@ -35,7 +35,7 @@ $authorBackground: #555555;
 }
 
 .message-author-container {
-  width: 50%;
+  width: 75%;
   text-align: right;
   // Fixed overlap of author and message
   margin-top: 5px;
